# vindicta-economy

./: 404.html  README.md  bdd_compute_ledger.db  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_compute_ledger.db
.agent/workflows/: jd-bugfix.md  sd-implement.md  sse-code-review.md
.specify/memory/: constitution.md
docs/: index.md
features/: integrity.feature  transactions.feature  void_banker.feature
features/steps/: integrity_steps.py  transaction_steps.py  void_banker_steps.py
search/: search_index.json
src/vindicta_economy/: __init__.py  health.py  integrity.py  models.py
src/vindicta_economy/governor/: policy.py  quotas.py
src/vindicta_economy/ledger/: atomic_credits.py  manager.py
tests/: test_economy.py  test_economy_deep.py  test_void_banker.py
